--- a/Hospital/appsettings.json
+++ b/Hospital/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=NewHotel;Trusted_Connection=True;TrustServerCertificate=True"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=Hospitall;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  }
 }
